kustomize/parlasite-x/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasite-x
  labels:
    app: parlasite-x
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasite-x
  template:
    metadata:
      labels:
        app: parlasite-x
    spec:
      containers:
        - name: parlasite-x
          image: parlasite-slovenija
          ports:
            - containerPort: 3066
          resources:
            requests:
              memory: 400Mi
              cpu: 400m
            limits:
              memory: 400Mi
              cpu: 400m
          startupProbe:
            httpGet:
              path: /readyz
              port: 3066
            periodSeconds: 10
            failureThreshold: 30 # 30x10 = 300s = 5min
